Attempting to solve nav vertical align problem

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ footer a{
 
 header ul{
   float: right;
+  margin-top: 2rem;
 }
 
 header ul li, footer ul li{
